# MJView

./: AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  README  configure  configure.ac
data/: COPYING_CC  LICENSE  Makefile.am  Makefile.in  mjview.desktop.in  mjview.ui  split_charinfo.pl
po/: POTFILES.in  ja.po
src/: Makefile.am  Makefile.in  ft_cairo.c  ft_cairo.h  main.c  mjview-stepadd.c  mjview-stepadd.h  mjview.c  mjview.h  mjview.ui  split_charinfo.pl
